# cogee

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: CI.yml  python-package.yml  readme-publish.yml
changelog/: index.html
cogee/: __init__.py  cogee.py
docs/: CNAME  changelog.md  index.md  installation.md
docs/tools/: bucket_list.md  init.md  register.md  subfolder.md
installation/: index.html
license/: index.html
search/: search_index.json
tools/bucket_list/: index.html
tools/init/: index.html
tools/register/: index.html
tools/subfolder/: index.html
